fixed code wrap

--- a/theme/templates/includes/style.css
+++ b/theme/templates/includes/style.css
@@ -14,6 +14,16 @@
     --green:#91b859;
     --red: #e53935;
 }
+.codehilite pre{
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+.codehilite pre code {
+  white-space: pre-wrap;
+}
 *{
     box-sizing: border-box;
 }
